src/objects/Participant_Online_App_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>AmazonFile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related AmazonFile</description>
        <label>AmazonFile</label>
        <referenceTo>AmazonFile__c</referenceTo>
        <relationshipLabel>Participant Online App Requirements</relationshipLabel>
        <relationshipName>Participant_Online_App_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation_Application_Requirement__c</fullName>
        <description>Related Participation Application Requirement</description>
        <label>Participation Application Requirement</label>
        <referenceTo>Participation_Application_Requirement__c</referenceTo>
        <relationshipLabel>Participant Online App Requirements</relationshipLabel>
        <relationshipName>Participant_Online_App_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Participation_Online_Application__c</fullName>
        <description>Related Participation Online Application</description>
        <label>Participation Online Application</label>
        <referenceTo>Participation_Online_Application__c</referenceTo>
        <relationshipLabel>Participant Online App Requirements</relationshipLabel>
        <relationshipName>Participant_Online_App_Requirements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Incomplete&quot;</defaultValue>
        <description>If it is incomplete or done</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isToShow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if it&apos;s to show</description>
        <label>isToShow</label>
        <type>Checkbox</type>
    </fields>
    <label>Participant Online App Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Participation_Application_Requirement__c</columns>
        <columns>Participation_Online_Application__c</columns>
        <columns>AmazonFile__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POAR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Online App Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>